fix title, footer, contact spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,11 +33,14 @@ p{
   color: white;
 }
 
+.footer{
+  background-color: dimgray;
+}
 .copy{
   text-align: left;
   font-size: 11px;
   color: white;
-  background-color: dimgray;
+
 }
 
 .bottom-list{
